--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -46,7 +46,7 @@
     padding-top: 40px;
     text-align: center;
     background-image: url("public/vector.svg");
-    background-size: 200px;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position-x: right;
 }
@@ -97,19 +97,6 @@
     justify-content: center;
 }
 
-.popular::b {
-    content: "Popular";
-    position: absolute;
-    margin: 10px;
-    background-color: var(--popular);
-    color: var(--list-background);
-    border-radius: 10px;
-    padding: 5px 8px;
-    font-size: 10px;
-    font-weight: 600;
-    letter-spacing: 1px;
-}
-
 @media (width >=640px) {
     .home__list__container {
         margin: 140px;
@@ -118,7 +105,7 @@
     }
 
     .home__list__texts {
-        background-size: 250px;
+        background-size: contain;
         background-position-x: rigth;
         width: 90%;
     }
@@ -137,7 +124,7 @@
 
 @media only screen and (width >=1100px) {
     .home__list__container {
-        background-size: 30%;
+        background-size: contain;
     }
 }
 
